--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
   --CLOUD: #f4f4fd;
   --hover-link: #404bbf;
   --CORNFLOWER: #e7e9fc;
+  --NAVY-BLUE-modal: rgba(46, 47, 66, 0.4);
 }
 
 .link {
@@ -33,17 +34,72 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
+}
 
+.is-hidden {
+  display: none;
+}
+
+.modal {
+  width: 408px;
+  height: 584px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: var(--DAIRY, #fcfcfc);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+
+.modal-svg {
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--NAVY-BLUE-modal);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-btn {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  padding: 0;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: var(--CORNFLOWER);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /*HEADER*/
 .header {
   background-color: white;
   text-align: center;
-  
+
   border-bottom: 1px solid var(--CORNFLOWER);
 }
 
+.header-hover::after {
+  content: "";
+  height: 4px;
+  width: 100%;
+  background-color: var(--iris);
+  border-radius: 2px;
+  display: flex;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+}
 
 .container {
   width: 100%;
@@ -51,7 +107,6 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
-
 
 .logo {
   color: var(--iris);
@@ -65,7 +120,6 @@ body {
   font-family: "Raleway", sans-serif;
   margin-right: 76px;
   padding: 24px 0;
-
 }
 
 .logo-text {
@@ -90,6 +144,11 @@ body {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.32px;
+  position: relative;
+}
+
+.header-hover {
+  color: var(--iris);
 }
 
 .contacts {
@@ -120,6 +179,16 @@ body {
 .hero {
   background-color: var(--NAVY-BLUE);
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-container {
@@ -164,6 +233,16 @@ body {
 
 /*Section 2*/
 
+.info-svg-container {
+  background-color: var(--CLOUD);
+  padding: 24px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+  border-radius: 4px;
+}
+
 .page-info-list {
   gap: 24px;
 }
@@ -177,7 +256,6 @@ body {
   margin-bottom: 8px;
 }
 
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -190,9 +268,6 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-
-
 
 .page-info-item {
   width: calc((100% - 72px) / 4);
@@ -244,10 +319,39 @@ body {
   gap: 24px;
 }
 
-.wwd-info-item{
+.wwd-info-item {
   width: calc((100% - 48px) / 3);
 }
 /*Section 4*/
+
+.our-team-info-svg {
+  background-color: #4d5ae5;
+  height: 40px;
+  width: 40px;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.info_svg{
+  background-color: var(--iris);
+  color: white;
+}
+
+.our-team-svg {
+  display: flex;
+  width: 232px;
+  height: auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  list-style: none;
+  margin-top: 8px;
+  border-radius: 12px;
+}
 
 .our-team {
   background-color: var(--CLOUD);
@@ -265,13 +369,11 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   margin-bottom: 72px;
-  
 }
 
 .our-team-list {
   gap: 24px;
 }
-
 
 .our-team-item {
   background-color: var(--WHITE);
@@ -400,14 +502,12 @@ body {
   border-top: none;
 }
 
-
-.container-item-team{
+.container-item-team {
   padding: 32px 0;
 }
 /*PORTFOLIO SECTION*/
 
-
-.mainsec{
-  padding-top: 96px; padding-bottom: 120px; 
-
+.mainsec {
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
