--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,8 @@ body {
   --hover-link: #404bbf;
   --CORNFLOWER: #e7e9fc;
   --NAVY-BLUE-modal: rgba(46, 47, 66, 0.4);
+  --GREEN: #31d0aa;
+  --LIGHT-SLATE: #8e8f99;
 }
 
 .link {
@@ -325,7 +327,7 @@ body {
 /*Section 4*/
 
 .our-team-info-svg {
-  background-color: #4d5ae5;
+  background-color: var(--iris);
   height: 40px;
   width: 40px;
   border-radius: 100px;
@@ -333,16 +335,19 @@ body {
   justify-content: center;
   align-items: center;
   gap: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.info_svg{
-  background-color: var(--iris);
-  color: white;
+.our-team-info-svg:hover {
+  background-color: var(--hover-link);
+}
+
+.team-svg {
+  fill: white;
 }
 
 .our-team-svg {
   display: flex;
-  width: 232px;
   height: auto;
   flex-direction: row;
   justify-content: center;
@@ -350,7 +355,6 @@ body {
   gap: 24px;
   list-style: none;
   margin-top: 8px;
-  border-radius: 12px;
 }
 
 .our-team {
@@ -407,7 +411,60 @@ body {
   letter-spacing: 0.32px;
 }
 
+/*SECTION 5*/
+
+.customers-info {
+  padding: 120px 0;
+}
+
+.customers-title {
+  color: var(--NAVY-BLUE);
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  gap: 24px;
+}
+
+.customers-item {
+  height: 88px;
+  width: calc((100% - 5 * 24px) / 6);
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--LIGHT-SLATE);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--LIGHT-SLATE);
+}
+
+.customers-svg {
+  margin: 16px 32px;
+  display: block;
+  fill: currentColor;
+}
+
+.customers-link:hover {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
 /*FOOTER*/
+
+.footer-container {
+  display: flex;
+  gap: 120px;
+}
 
 .footer {
   background-color: var(--NAVY-BLUE);
@@ -417,6 +474,7 @@ body {
 .footer-logo {
   margin-bottom: 16px;
   display: inline-block;
+  padding: 0;
 }
 
 .footer-logo-text {
@@ -434,6 +492,36 @@ body {
   width: 264px;
 }
 
+.footer-section2-title {
+  color: var(--WHITE);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+
+.footer-section2-list {
+  gap: 16px;
+}
+
+.footer-section2-item {
+  border-radius: 50%;
+  padding: 8px;
+  background-color: var(--iris);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.footer-section2-item:hover {
+  background-color: var(--GREEN);
+}
+
+.footer-section2-icon {
+  fill: var(--WHITE);
+}
+
 /*MAIN PORTFOLIO*/
 .filters-btn {
   font-family: "Roboto", sans-serif;
@@ -449,7 +537,6 @@ body {
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--CLOUD, #f4f4fd);
   align-items: center;
-  margin-top: 96px;
 }
 
 .filters-btn:hover,
@@ -505,6 +592,28 @@ body {
 .container-item-team {
   padding: 32px 0;
 }
+
+.cards-folder {
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-folder-text {
+  position: absolute;
+  transform: translateY(100%);
+  padding: 40px 32px;
+  top: 0;
+  background-color: var(--iris);
+  color: var(--CLOUD);
+  width: 100%;
+  height: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-link:hover .cards-folder-text {
+  transform: translateY(0%);
+}
+
 /*PORTFOLIO SECTION*/
 
 .mainsec {
