--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
 .header {
   background-color: white;
   text-align: center;
-
+   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   border-bottom: 1px solid var(--CORNFLOWER);
 }
 
@@ -95,11 +95,11 @@ body {
   content: "";
   height: 4px;
   width: 100%;
-  background-color: var(--iris);
+  background-color: var(--hover-link);
   border-radius: 2px;
   display: flex;
   position: absolute;
-  bottom: -2px;
+  bottom: -1px;
   left: 0;
 }
 
@@ -147,10 +147,11 @@ body {
   line-height: 24px;
   letter-spacing: 0.32px;
   position: relative;
+  transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-hover {
-  color: var(--iris);
+  color: var(--hover-link);
 }
 
 .contacts {
@@ -170,6 +171,7 @@ body {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list {
@@ -226,6 +228,7 @@ body {
   border-radius: 4px;
   border: none;
   min-width: 169px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -326,7 +329,7 @@ body {
 }
 /*Section 4*/
 
-.our-team-info-svg {
+.our-team-link {
   background-color: var(--iris);
   height: 40px;
   width: 40px;
@@ -334,7 +337,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 24px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
